--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.555.0",
     "meshline": "^3.3.1",
     "next": "^16.0.7",
